# RustyMiroSquid

./: .gitignore  AGENTS.md  Backlog-RustyMiroSquid-v1.md  CLAUDE.md  Dockerfile  GEMINI.md  INDEX.md  MCP-REGISTRY.md  Patchnote-RustyMiroSquid-v1.md  README-RustyMiroSquid-v1.md  README.md  Tracking-RustyMiroSquid-v1.md  docker-compose.yml  package.json  pyrightconfig.json
.claude/: CLAUDE.md
.github/workflows/: docker-image.yml
backend/: GEMINI.md  pyproject.toml  pytest_coverage.txt  pytest_out.txt  pytest_out2.txt  pytest_url_fetcher.txt  requirements.txt  run.md  run.py
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/api/: __init__.py  graph.py  market.py  report.py  simulation.py  templates.py
backend/app/bridges/: __init__.py  alpaca_bridge.py  ibkr_bridge.py
backend/app/models/: agent_personas.py  project.py
backend/app/services/: entity_reader.py  fiscal_service.py  graph_builder.py  graph_memory_updater.py  graph_tools.py  market_connector.py  oasis_profile_generator.py  ontology_generator.py  polars_analytics.py  prompt_compressor.py  report_agent.py  semantic_cache.py  sentiment_velocity.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  trading_persona_factory.py  trigger_service.py  web_enrichment.py
backend/app/storage/: __init__.py  embedding_service.py  neo4j_storage.py  ner_extractor.py  personas_v1.json  search_service.py
backend/app/utils/: claude_code_client.py  file_parser.py  llm_client.py  logger.py  retry.py  url_fetcher.py
backend/docs/: LLM_CALL_REFERENCE.md
backend/scripts/: action_logger.py  belief_integration.py  cross_platform_digest.py  market_media_bridge.py  migrate_orjson.py  round_memory.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  setup_hardware.py  test_3platform_interconnected.py  test_e2e_api.py  test_full_pipeline.py  test_market_generation.py  test_pipeline_phase5_6.py  test_pipeline_twitter_polymarket.py  test_polymarket.py  test_profile_format.py  test_report_generation.py  test_rustymirosquid_integration.py
backend/tests/: test_agent_personas.py  test_bridges.py  test_fiscal_service.py  test_orjson_compat.py  test_polars_analytics.py  test_report_api.py  test_threading_safety.py  test_url_fetcher.py  verify_fiscal.py
backend/wonderwall/: GEMINI.md
backend/wonderwall/environment/: broker.py
backend/wonderwall/simulations/: base.py
backend/wonderwall/social_agent/: round_analyzer.py  trading_action.py  trading_agent.py  trading_policy.py
docs/analysis/: Analysis-RCej60ozIDQ.md  Analysis-j9Fg3PaqVmk.md  Analysis-sLmUHb4WloQ.md  OVTLYR-Fund-Manager-Plans.md  Resume-Strategies-AI-Agents.md  Risk-Reward-Assets.md  trading_platforms_france.md
frontend/: GEMINI.md  index.html  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: market.js
frontend/src/assets/: main.css
frontend/src/components/: MarketDashboard.vue  Step2EnvSetup.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/composables/: useMarketWebSocket.js
frontend/src/views/: Home.vue
