[project]
name = "rustymirosquid-backend"
version = "0.1.0"
description = "RustyMiroSquid - A Simple and Universal Swarm Intelligence Engine, Predicting Anything"
requires-python = ">=3.14"
license = { text = "AGPL-3.0" }
authors = [
    { name = "RustyMiroSquid Team" }
]

dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # LLM related
    "openai>=1.0.0",

    # Neo4j
    "neo4j>=6.1.0",

    # HTTP requests (for Ollama embedding API)
    "requests>=2.31.0",

    # OASIS social media simulation (Wonderwall fork)
    # Wonderwall (oasis package) is bundled directly in backend/oasis/
    # "camel-oasis==0.2.5",  # replaced by bundled Wonderwall
    "camel-ai==0.2.90",

    # Wonderwall runtime dependencies (used by recsys, agent_graph, agents_generator)
    # These are hard imports that crash on startup if missing.
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "igraph>=0.11.0",

    # File processing
    "PyMuPDF>=1.24.0",
    # Encoding detection (supports non-UTF-8 encoded text files)
    "charset-normalizer>=3.0.0",

    # Utility libraries
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "polars>=1.15.0",
    
    # Financial APIs & Triggers
    "alpaca-py>=0.30.0",
    "ib-insync>=0.9.86",
    "yfinance>=0.2.36",
    "feedparser>=6.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pipreqs>=0.5.0",
]

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
